--- a/code/dev/parts/apps/edit.html
+++ b/code/dev/parts/apps/edit.html
@@ -51,7 +51,7 @@
           <div class="form-group" ng-class="{'has-error': editForm.app_name.$invalid && editForm.app_name.$dirty}">
             <label for="app_name" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="App name (50 characters max)">App Name *</label>
             <div class="col-sm-10">
-              <input type="text" class="form-control" name="app_name" ng-disabled="_loading" ng-model="model.app_name" ng-maxlength="50" id="app_name" ng-pattern="/^[A-Za-z0-9 -]+$/" required>
+              <input type="text" class="form-control" name="app_name" ng-disabled="_loading" ng-model="model.app_name" ng-maxlength="50" id="app_name" ng-pattern="NO_SPECIAL_CHARS" required>
               <div class="error-messages" ng-messages="editForm.app_name.$error" role="alert">
                 <div ng-messages-include="parts/shared/error-messages.html"></div>
               </div>
@@ -238,7 +238,7 @@
                                       editForm.comment.$dirty }">
             <label for="comment" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Comment (300 characters max)">Comment</label>
             <div class="col-sm-10">
-              <textarea id="comment" class="form-control" name="comment" ng-model="model.comment" placeholder="Comment (300 characters max)" ng-maxlength="300" ng-disabled="_loading">
+              <textarea id="comment" class="form-control" name="comment" ng-model="model.comment" placeholder="Comment (300 characters max)" ng-maxlength="300" ng-pattern="NO_SPECIAL_CHARS" ng-disabled="_loading">
               </textarea>
               <div class="error-messages" ng-messages="editForm.comment.$error" role="alert" ng-messages-multiple>
                 <div ng-messages-include="parts/shared/error-messages.html"></div>
