--- a/code/dev/parts/domains/domain-caching-rule/domain-caching-rule.tpl.html
+++ b/code/dev/parts/domains/domain-caching-rule/domain-caching-rule.tpl.html
@@ -10,7 +10,7 @@
     </div>
     <label class="col-md-3 control-label">URL</label>
     <div class="col-md-9">
-      <input type="text" validate-caching-rule-url name="url_value" class="form-control" ng-model="$ctrl.rule.url.value" required>
+      <input type="text" validate-caching-rule-url name="url_value" class="form-control" ng-model="$ctrl.rule.url.value" ng-required>
       <div class="error-messages" ng-messages="editForm.url_value.$error" role="alert" ng-messages-multiple>
         <div ng-messages-include="parts/shared/error-messages.html"></div>
       </div>
@@ -30,9 +30,9 @@
     </div>
   </div>
   <div class="form-group form-inline">
-    <label class="col-sm-3 control-label"> Edge Cache TTL</label>
+    <label class="col-sm-3 control-label" popover-trigger="mouseenter" uib-popover="Defines how long a cached objected will be consider frash (range 0-10,000,000)">Edge Cache TTL</label>
     <div class="col-md-9">
-      <input type="number" class="form-control" min="0" max="99999999" ng-model="$ctrl.rule.edge_caching.new_ttl"> second(s)
+      <input type="number" class="form-control" min="0" max="10000000" ng-model="$ctrl.rule.edge_caching.new_ttl" required> second(s)
     </div>
   </div>
   <div class="form-group form-inline">
