--- a/code/dev/parts/keys/edit.html
+++ b/code/dev/parts/keys/edit.html
@@ -40,6 +40,7 @@
                      id="key_name"
                      name="keyName"
                      ng-disabled="_loading"
+                     ng-pattern="NO_SPECIAL_CHARS"
                      ng-maxlength="30"
                      placeholder="Api Key name" required>
               <div class="error-messages" ng-messages="editForm.keyName.$error" role="alert" ng-messages-multiple>
