--- a/code/dev/parts/profile/edit-company.html
+++ b/code/dev/parts/profile/edit-company.html
@@ -91,7 +91,7 @@
               <label for="companyName" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Company name (150 characters max)">
                 Company Name * &nbsp;</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control" id="companyName" name="companyName" placeholder="Company Name" ng-maxlength="150" ng-model="model.companyName" ng-disabled="_loading" required>
+                <input type="text" class="form-control" id="companyName" name="companyName" placeholder="Company Name" ng-maxlength="150" ng-model="model.companyName" ng-pattern="NO_SPECIAL_CHARS" ng-disabled="_loading" required>
                 <div class="error-messages" ng-messages="editForm.companyName.$error" role="alert" ng-messages-multiple>
                   <div ng-messages-include="parts/shared/error-messages.html"></div>
                 </div>
@@ -102,7 +102,7 @@
             <div class="form-group" ng-class="{ 'has-error': editForm.firstName.$invalid && editForm.firstName.$dirty }">
               <label for="firstName" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Contact person first name (30 characters max)">First Name *</label>
               <div class="col-sm-10 ">
-                <input type="text" class="form-control" required id="firstName" name="firstName" placeholder="First Name" ng-maxlength="30" ng-model="model.first_name" ng-disabled="_loading" required>
+                <input type="text" class="form-control" required id="firstName" name="firstName" placeholder="First Name" ng-maxlength="30" ng-model="model.first_name" ng-pattern="NO_SPECIAL_CHARS" ng-disabled="_loading" required>
                 <div class="error-messages" ng-messages="editForm.firstName.$error" role="alert" ng-messages-multiple>
                   <div ng-messages-include="parts/shared/error-messages.html"></div>
                 </div>
@@ -112,7 +112,7 @@
             <div class="form-group" ng-class="{ 'has-error': editForm.lastName.$invalid && editForm.lastName.$dirty }">
               <label for="lastName" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Contact person last name (30 characters max)">Last Name *</label>
               <div class="col-sm-10 ">
-                <input type="text" class="form-control" required id="lastName" name="lastName" placeholder="Last Name"  ng-maxlength="30" ng-model="model.last_name" ng-disabled="_loading" required>
+                <input type="text" class="form-control" required id="lastName" name="lastName" placeholder="Last Name"  ng-maxlength="30" ng-model="model.last_name" ng-pattern="NO_SPECIAL_CHARS" ng-disabled="_loading" required>
                 <div class="error-messages" ng-messages="editForm.lastName.$error" role="alert" ng-messages-multiple>
                   <div ng-messages-include="parts/shared/error-messages.html"></div>
                 </div>
@@ -140,7 +140,7 @@
             <div class="form-group" ng-class="{'has-error': editForm.address1.$invalid && editForm.address1.$dirty }">
               <label for="address1" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Contact street address (150 characters max)">Address *</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control" required id="address1" name="address1" placeholder="Address 1" ng-maxlength="150" ng-model="model.address1" ng-disabled="_loading">
+                <input type="text" class="form-control" required id="address1" name="address1" placeholder="Address 1" ng-maxlength="150" ng-model="model.address1" ng-pattern="NO_SPECIAL_CHARS" ng-disabled="_loading">
                 <div class="error-messages" ng-messages="editForm.address1.$error" role="alert" ng-messages-multiple>
                   <div ng-messages-include="parts/shared/error-messages.html"></div>
                 </div>
@@ -149,7 +149,7 @@
             <div class="form-group" ng-class="{ 'has-error': editForm.address2.$invalid && editForm.address2.$dirty }">
               <label for="address2" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Optional second line of street address (150 characters max)">Address (Line 2) &nbsp;</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control" id="address2" name="address2" placeholder="Address (Line 2)" ng-maxlength="150" ng-model="model.address2" ng-disabled="_loading">
+                <input type="text" class="form-control" id="address2" name="address2" placeholder="Address (Line 2)" ng-maxlength="150" ng-model="model.address2" ng-pattern="NO_SPECIAL_CHARS" ng-disabled="_loading">
                 <div class="error-messages" ng-messages="editForm.address2.$error" role="alert" ng-messages-multiple>
                   <div ng-messages-include="parts/shared/error-messages.html"></div>
                 </div>
@@ -168,7 +168,7 @@
             <div class="form-group" ng-class="{ 'has-error': editForm.state.$invalid && editForm.state.$dirty }">
               <label for="state" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="State (150 characters max)">State *</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control" id="state" name="state" required placeholder="State" ng-model="model.state" ng-maxlength="150" ng-disabled="_loading">
+                <input type="text" class="form-control" id="state" name="state" required placeholder="State" ng-model="model.state" ng-maxlength="150" ng-pattern="NO_SPECIAL_CHARS" ng-disabled="_loading">
                 <div class="error-messages" ng-messages="editForm.state.$error" role="alert" ng-messages-multiple>
                   <div ng-messages-include="parts/shared/error-messages.html"></div>
                 </div>
@@ -177,7 +177,7 @@
             <div class="form-group" ng-class="{ 'has-error': editForm.city.$invalid && editForm.city.$dirty }">
               <label for="City" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="City name (150 characters max)">City *</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control" id="city" name="city" required placeholder="City" ng-model="model.city" ng-maxlength="150" ng-disabled="_loading">
+                <input type="text" class="form-control" id="city" name="city" required placeholder="City" ng-model="model.city" ng-maxlength="150" ng-pattern="NO_SPECIAL_CHARS" ng-disabled="_loading">
                 <div class="error-messages" ng-messages="editForm.city.$error" role="alert" ng-messages-multiple>
                   <div ng-messages-include="parts/shared/error-messages.html"></div>
                 </div>
@@ -186,7 +186,7 @@
             <div class="form-group" ng-class="{ 'has-error': editForm.Zipcode.$invalid && editForm.Zipcode.$dirty }">
               <label for="Zipcode" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Zip code (30 characters max)">Zip Code *</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control" id="Zipcode" name="Zipcode" ng-maxlength="30" required placeholder="Zip Code" ng-model="model.zipcode" ng-disabled="_loading">
+                <input type="text" class="form-control" id="Zipcode" name="Zipcode" ng-maxlength="30" required placeholder="Zip Code" ng-model="model.zipcode" ng-pattern="NO_SPECIAL_CHARS" ng-disabled="_loading">
                 <div class="error-messages" ng-messages="editForm.Zipcode.$error" role="alert" ng-messages-multiple>
                   <div ng-messages-include="parts/shared/error-messages.html"></div>
                 </div>
@@ -196,7 +196,7 @@
             <div class="form-group" ng-class="{ 'has-error': editForm.comment.$invalid && editForm.comment.$dirty }">
               <label for="comment" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Comment (300 characters max)">Comment</label>
               <div class="col-sm-10">
-                <textarea id="comment" class="form-control" name="comment" ng-model="model.comment" placeholder="Comment (300 characters max) " ng-maxlength="300" ng-disabled="_loading">
+                <textarea id="comment" class="form-control" name="comment" ng-model="model.comment" placeholder="Comment (300 characters max) " ng-maxlength="300" ng-pattern="NO_SPECIAL_CHARS" ng-disabled="_loading">
                 </textarea>
                 <div class="error-messages" ng-messages="editForm.comment.$error" role="alert" ng-messages-multiple>
                   <div ng-messages-include="parts/shared/error-messages.html"></div>
@@ -237,7 +237,8 @@
                 <div class="form-group col-md-6" ng-class="{ 'has-error': editForm.billingFirstName.$invalid && editForm.billingFirstName.$dirty }">
                   <label for="billingFirstName" class="col-sm-4 control-label" popover-trigger="mouseenter" uib-popover="First Name (30 characters max)">First Name *</label>
                   <div class="col-sm-8">
-                    <input type="text" class="form-control" required id="first_name" name="billingFirstName" placeholder="First Name" ng-model="model.billing_info.first_name" ng-maxlength="30" ng-disabled="_loading">
+                    <input type="text" class="form-control" required id="first_name" name="billingFirstName" placeholder="First Name" ng-model="model.billing_info.first_name" ng-maxlength="30" 
+                      ng-pattern="NO_SPECIAL_CHARS" ng-disabled="_loading">
                     <div class="error-messages" ng-messages="editForm.billingFirstName.$error" role="alert" ng-messages-multiple>
                       <div ng-messages-include="parts/shared/error-messages.html"></div>
                     </div>
@@ -247,7 +248,8 @@
                 <div class="form-group col-md-6" ng-class="{ 'has-error': editForm.billingLastName.$invalid &&  editForm.billingLastName.$dirty }">
                   <label for="billingLastName" class="col-sm-4 control-label" popover-trigger="mouseenter" uib-popover="Last Name (30 characters max)">Last Name *</label>
                   <div class="col-sm-8">
-                    <input type="text" class="form-control" required id="last_name" name="billingLastName" placeholder="Last Name" ng-model="model.billing_info.last_name" ng-maxlength="30" ng-disabled="_loading">
+                    <input type="text" class="form-control" required id="last_name" name="billingLastName" placeholder="Last Name" ng-model="model.billing_info.last_name" ng-maxlength="30"
+                      ng-pattern="NO_SPECIAL_CHARS" ng-disabled="_loading">
                     <div class="error-messages" ng-messages="editForm.billingLastName.$error" role="alert" ng-messages-multiple>
                       <div ng-messages-include="parts/shared/error-messages.html"></div>
                     </div>
@@ -280,7 +282,8 @@
                 <div class="form-group col-md-6" ng-class="{ 'has-error': editForm.billingAddress1.$invalid && editForm.billingAddress1.$dirty }">
                   <label for="billingAddress1" class="col-sm-4 control-label" popover-trigger="mouseenter" uib-popover="Street address (150 characters max)">Address *</label>
                   <div class="col-sm-8">
-                    <input type="text" class="form-control" required id="billingAddress1" name="billingAddress1" placeholder="Address 1" ng-model="model.billing_info.address1" ng-maxlength="150" ng-disabled="_loading">
+                    <input type="text" class="form-control" required id="billingAddress1" name="billingAddress1" placeholder="Address 1" ng-model="model.billing_info.address1" ng-maxlength="150" 
+                      ng-pattern="NO_SPECIAL_CHARS" ng-disabled="_loading">
                     <div class="error-messages" ng-messages="editForm.billingAddress1.$error" role="alert" ng-messages-multiple>
                       <div ng-messages-include="parts/shared/error-messages.html"></div>
                     </div>
@@ -289,7 +292,8 @@
                 <div class="form-group col-md-6" ng-class="{ 'has-error': editForm.billingAddress2.$invalid && editForm.billingAddress2.$dirty }">
                   <label for="billingAddress2" class="col-sm-4 control-label" popover-trigger="mouseenter" uib-popover="Optional second line of street address">Address (Line 2) &nbsp;</label>
                   <div class="col-sm-8">
-                    <input type="text" class="form-control" id="billingAddress2" name="billingAddress2" placeholder="Address (Line 2)" ng-model="model.billing_info.address2" ng-maxlength="150" ng-disabled="_loading">
+                    <input type="text" class="form-control" id="billingAddress2" name="billingAddress2" placeholder="Address (Line 2)" ng-model="model.billing_info.address2" ng-maxlength="150" 
+                      ng-pattern="NO_SPECIAL_CHARS" ng-disabled="_loading">
                     <div class="error-messages" ng-messages="editForm.billingAddress2.$error" role="alert" ng-messages-multiple>
                       <div ng-messages-include="parts/shared/error-messages.html"></div>
                     </div>
@@ -312,7 +316,7 @@
                 <div class="form-group col-md-6" ng-class="{ 'has-error': editForm.billingState.$invalid &&  editForm.billingState.$dirty }">
                   <label for="billingState" class="col-sm-4 control-label" popover-trigger="mouseenter" uib-popover="State (150 characters max)">State *</label>
                   <div class="col-sm-8">
-                    <input type="text" class="form-control" id="billingState" name="billingState" required placeholder="State" ng-model="model.billing_info.state" ng-maxlength="150" ng-disabled="_loading">
+                    <input type="text" class="form-control" id="billingState" name="billingState" required placeholder="State" ng-model="model.billing_info.state" ng-maxlength="150" ng-pattern="NO_SPECIAL_CHARS" ng-disabled="_loading">
                     <div class="error-messages" ng-messages="editForm.billingState.$error" role="alert" ng-messages-multiple>
                       <div ng-messages-include="parts/shared/error-messages.html"></div>
                     </div>
@@ -321,7 +325,7 @@
                 <div class="form-group col-md-6" ng-class="{ 'has-error': editForm.billingCity.$invalid &&  editForm.billingCity.$dirty }">
                   <label for="billingCity" class="col-sm-4 control-label" popover-trigger="mouseenter" uib-popover="City name (150 characters max)">City *</label>
                   <div class="col-sm-8">
-                    <input type="text" class="form-control" id="billingCity" name="billingCity" required placeholder="City" ng-model="model.billing_info.city" ng-maxlength="150" ng-disabled="_loading">
+                    <input type="text" class="form-control" id="billingCity" name="billingCity" required placeholder="City" ng-model="model.billing_info.city" ng-maxlength="150" ng-pattern="NO_SPECIAL_CHARS" ng-disabled="_loading">
                     <div class="error-messages" ng-messages="editForm.billingCity.$error" role="alert" ng-messages-multiple>
                       <div ng-messages-include="parts/shared/error-messages.html"></div>
                     </div>
@@ -330,7 +334,8 @@
                 <div class="form-group col-md-6" ng-class="{ 'has-error': editForm.billingZipcode.$invalid && editForm.billingZipcode.$dirty }">
                   <label for="billingZipcode" class="col-sm-4 control-label" popover-trigger="mouseenter" uib-popover="Zip code (30 characters max)">Zip Code *</label>
                   <div class="col-sm-8">
-                    <input type="text" class="form-control" id="billingZipcode" name="billingZipcode" ng-maxlength="30" required placeholder="Zip Code" ng-model="model.billing_info.zipcode" ng-disabled="_loading">
+                    <input type="text" class="form-control" id="billingZipcode" name="billingZipcode" ng-maxlength="30" required placeholder="Zip Code" ng-model="model.billing_info.zipcode" 
+                      ng-pattern="NO_SPECIAL_CHARS" ng-disabled="_loading">
                     <div class="error-messages" ng-messages="editForm.billingZipcode.$error" role="alert" ng-messages-multiple>
                       <div ng-messages-include="parts/shared/error-messages.html"></div>
                     </div>
