--- a/code/dev/parts/ssl_certs/new.html
+++ b/code/dev/parts/ssl_certs/new.html
@@ -24,7 +24,7 @@
           <div class="form-group" ng-class="{ 'has-error': createForm.certName.$invalid && createForm.certName.$dirty }">
             <label for="cert_name" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Enter here a certificate name (150 characters max)">Certificate Name *</label>
             <div class="col-sm-10">
-              <input type="text" autofocus class="form-control" ng-disabled="_loading" ng-model="model.cert_name" name="certName" id="cert_name" placeholder="Certificate Name" ng-maxlength="150" required>
+              <input type="text" autofocus class="form-control" ng-disabled="_loading" ng-model="model.cert_name" name="certName" id="cert_name" placeholder="Certificate Name" ng-pattern="NO_SPECIAL_CHARS" ng-maxlength="150" required>
               <div class="error-messages" ng-messages="createForm.certName.$error" role="alert" ng-messages-multiple>
                 <div ng-messages-include="parts/shared/error-messages.html"></div>
               </div>
@@ -97,7 +97,7 @@
           <div class="form-group" ng-class="{ 'has-error': createForm.comment.$invalid && createForm.comment.$dirty }">
             <label for="comment" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Comment">Comment</label>
             <div class="col-md-10">
-              <textarea id="comment" placeholder="Comment (max 300 symbol)" class="form-control" name="comment" ng-model="model.comment" ng-disabled="_loading" ng-maxlength="300">
+              <textarea id="comment" placeholder="Comment (max 300 symbol)" class="form-control" name="comment" ng-model="model.comment" ng-disabled="_loading" ng-pattern="NO_SPECIAL_CHARS" ng-maxlength="300">
               </textarea>
               <div class="error-messages" ng-messages="createForm.comment.$error" role="alert" ng-messages-multiple>
                 <div ng-messages-include="parts/shared/error-messages.html"></div>
