--- a/code/dev/parts/users/edit.html
+++ b/code/dev/parts/users/edit.html
@@ -30,7 +30,7 @@
           <div class="form-group" ng-class="{'has-error': editForm.firstName.$invalid && editForm.firstName.$dirty}">
             <label for="firstName" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="First name (30 characters max)">First Name *</label>
             <div class="col-sm-10">
-              <input type="text" class="form-control" id="firstname" name="firstName" placeholder="First Name" ng-model="model.firstname" ng-disabled="_loading" ng-maxlength="30" required>
+              <input type="text" class="form-control" id="firstname" name="firstName" placeholder="First Name" ng-model="model.firstname" ng-disabled="_loading" ng-maxlength="30" ng-pattern="NO_SPECIAL_CHARS" required>
               <div class="error-messages" ng-messages="editForm.firstName.$error" role="alert" ng-messages-multiple>
                 <div ng-messages-include="parts/shared/error-messages.html"></div>
               </div>
@@ -39,7 +39,7 @@
           <div class="form-group" ng-class="{'has-error': editForm.lastName.$invalid && editForm.lastName.$dirty}">
             <label for="lastName" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Last name (30 characters max)">Last Name *</label>
             <div class="col-sm-10">
-              <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Last Name" ng-model="model.lastname" ng-disabled="_loading" ng-maxlength="30" required="">
+              <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Last Name" ng-model="model.lastname" ng-disabled="_loading" ng-maxlength="30" ng-pattern="NO_SPECIAL_CHARS" required="">
               <div class="error-messages" ng-messages="editForm.lastName.$error" role="alert" ng-messages-multiple>
                 <div ng-messages-include="parts/shared/error-messages.html"></div>
               </div>
@@ -120,7 +120,7 @@
           <div class="form-group" ng-class="{ 'has-error': editForm.comment.$invalid && editForm.comment.$dirty }">
             <label for="comment" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Comment about the user (300 characters max)">Comment</label>
             <div class="col-sm-10">
-              <textarea id="comment" placeholder="Comment (300 characters max)" ng-maxlength="300" class="form-control" name="comment" ng-model="model.comment" ng-disabled="_loading">
+              <textarea id="comment" placeholder="Comment (300 characters max)" ng-maxlength="300" class="form-control" name="comment" ng-model="model.comment" ng-pattern="NO_SPECIAL_CHARS" ng-disabled="_loading">
               </textarea>
               <div class="error-messages" ng-messages="editForm.comment.$error" role="alert" ng-messages-multiple>
                 <div ng-messages-include="parts/shared/error-messages.html"></div>
