--- a/code/dev/parts/signup/form-billing-plans.tpl.html
+++ b/code/dev/parts/signup/form-billing-plans.tpl.html
@@ -11,7 +11,7 @@
 
      <div class="plans-body">
         <div class="row" ng-if="records.length > 0">
-          <div class="col-md-3  text-center" ng-repeat="item in records | orderBy: 'monthly_fee'">
+          <div class="col-sm-6 col-md-3 individual-plan" ng-repeat="item in records | orderBy: 'monthly_fee'">
             <div class="billing-plan">
               <div class="billing-plan-header">
                 <h2 class="billing-plan-title">{{item.name}}</h2>
@@ -20,13 +20,12 @@
                 <h1 class=""><span class="billing-plan-ammount">${{item.monthly_fee}}</span>/mon</h1>
               </div>
               <div class="billing-plan-details">
-                <div class="billing-plan-description">{{item.description}}</div>
+                <p class="billing-plan-description">{{item.description}}</p>
                 <h4>Overage Charges</h4>
                 <div class="billing-plan-services" ng-repeat="service in item.services">
                   <div>${{service.cost | number:2}} per {{service.measurement_unit}}</div>
                 </div>
               </div>
-              <hr>
               <footer class="billing-plan-action">
                 <button href="" ng-click="chooseBillingPlan(item)" class="btn btn-success btn-lg">Subscribe</button>
               </footer>
@@ -34,8 +33,9 @@
           </div>
           <hr/>
         </div>
+        <br>
         <div class="row">
-          <div class="col-md-offset-4 col-md-4  text-center " _style="max-height: 280px">
+          <div class=" col-sm-offset-3 col-md-offset-4 col-sm-6 col-md-4  text-center " _style="max-height: 280px">
             <div class="billing-plan">
               <div class="billing-plan-header">
                 <h2> Enterprise</h2></div>
@@ -44,13 +44,14 @@
               <div>
                 <div></div>
               </div>
-              <hr>
+
               <footer class="billing-plan-action">
                 <a href="https://www.revapm.com/contact-us/" class="btn btn-success btn-lg">Contact Us</a>
               </footer>
             </div>
           </div>
         </div>
+        <br>
         <div class="panel-footer row text-center">
         <p class="lead">Not sure which plan to choose? <a href="https://www.revapm.com/contact-us/" class="alert-link"><!-- <i class="glyphicon glyphicon-envelope"></i> -->Talk to an expert</a></p>
         </div>
