--- a/code/dev/parts/signup/signup.html
+++ b/code/dev/parts/signup/signup.html
@@ -13,7 +13,7 @@
                     <div class="col-xs-4 text-center">
                         <h1 class="signup">Sign Up</h1>
                     </div>
-                    <div class="col-xs-4 text-center">
+                    <div class="col-xs-4 text-right">
                        <h4 class="login-link">Already have an account? <a ui-sref="index">Login</a></h4>
                     </div>
                 </div>
