--- a/code/dev/parts/signup/form-short-signup.tpl.html
+++ b/code/dev/parts/signup/form-short-signup.tpl.html
@@ -1,23 +1,24 @@
-<div class="panel panel-default" ng-if="$ctrl.isRegistryFinish">
-  <div class="panel-heading">
-    <h4>Please finish your registration</h4>
-  </div>
-  <div class="panel-body" ng-if="$ctrl.isRegistryFinish">
-    <div class="row">
-      <div class="col-md-12">
-        <p class="lead">
-          We have sent an email with verification link to email address <b>{{$ctrl.model.email}}</b> - please continue the RevAPM registration process by following the link (don't forget to check your Spam mailbox too).
-        </p>
-        <p class="lead">
-          <!-- Now you can close the browser window. -->
-          <button type="text" class="btn btn-warning pull-right" ng-click="$ctrl.onRepeatSendRegistrationEmail($ctrl.model.email,$ctrl.model.password)">Didn’t receive the email?</button>
-        </p>
-      </div>
-    </div>
-  </div>
-</div>
-
 <div class="signup-form">
+
+  <div class="verification-msg" ng-if="$ctrl.isRegistryFinish">
+      <div class="row">
+          <div class="col-xs-offset-1 col-xm-10">
+              <h4>Please finish your registration</h4>
+          </div>
+      </div>
+      <div class="row">
+          <div class="col-xs-offset-1 col-xs-10">
+              <p class="lead">
+                  We have sent an email with verification link to email address <b>{{$ctrl.model.email}}</b> - please continue the RevAPM registration process by following the link (don't forget to check your Spam mailbox too).
+              </p>
+              <div class="clearfix">
+                  <button type="text" class="btn btn-warning pull-right" ng-click="$ctrl.onRepeatSendRegistrationEmail($ctrl.model.email,$ctrl.model.password)">Didn’t receive the email?</button>
+                  <!-- Now you can close the browser window. -->
+              </div>
+              <br>
+          </div>
+      </div>
+  </div>
 
   <div class="form-body" ng-if="!$ctrl.isRegistryFinish">
     <div class="row">
