Change “Activated On” on “Active Since”  in  Billing Summary page

--- a/code/dev/parts/profile/directives/subscription-summary.tpl.html
+++ b/code/dev/parts/profile/directives/subscription-summary.tpl.html
@@ -29,7 +29,7 @@
         <td>{{subscription.state | firstUpper}}</td>
       </tr>
       <tr>
-        <td>Activated On</td>
+        <td>Active Since</td>
         <td>{{subscription.activated_at | date }}</td>
       </tr>
     </table>
