--- a/code/dev/parts/apps/edit.html
+++ b/code/dev/parts/apps/edit.html
@@ -238,7 +238,7 @@
                                       editForm.comment.$dirty }">
             <label for="comment" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Comment (300 characters max)">Comment</label>
             <div class="col-sm-10">
-              <textarea id="comment" class="form-control" name="comment" ng-model="model.comment" placeholder="Comment (300 characters max)" ng-maxlength="300" ng-pattern="NO_SPECIAL_CHARS" ng-disabled="_loading">
+              <textarea id="comment" class="form-control" name="comment" ng-model="model.comment" placeholder="Comment (300 characters max)" ng-maxlength="300" ng-pattern="COMMENT_NO_SPECIAL_CHARS" ng-disabled="_loading">
               </textarea>
               <div class="error-messages" ng-messages="editForm.comment.$error" role="alert" ng-messages-multiple>
                 <div ng-messages-include="parts/shared/error-messages.html"></div>
