Add 'ng-messages-multiple' by default on all froms

--- a/code/dev/parts/auth/reset-password.html
+++ b/code/dev/parts/auth/reset-password.html
@@ -21,7 +21,7 @@
                      ng-maxlength="15"
                      required
                      autofocus>
-              <div class="error-messages" ng-messages="editForm.password.$error" role="alert">
+              <div class="error-messages" ng-messages="editForm.password.$error" role="alert" ng-messages-multiple>
                 <div ng-message="minlength" class="alert-text alert-text--minlength">Password must contain at least 8 characters</div>
                 <div ng-message="maxlength" class="alert-text alert-text--maxlength">Password must contain 15 characters max</div>
                 <div ng-messages-include="parts/shared/error-messages.html"></div>
@@ -39,7 +39,7 @@
                      name="passwordRepeat"
                      placeholder="Repeat Password"
                      validate-compare-to="password">
-              <div class="error-messages" ng-messages="editForm.passwordRepeat.$error" role="alert">
+              <div class="error-messages" ng-messages="editForm.passwordRepeat.$error" role="alert" ng-messages-multiple>
                 <div ng-messages-include="parts/shared/error-messages.html"></div>
               </div>
             </div>
