--- a/code/dev/parts/apps/edit.html
+++ b/code/dev/parts/apps/edit.html
@@ -52,7 +52,7 @@
             <label for="app_name" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="App name (50 characters max)">App Name *</label>
             <div class="col-sm-10">
               <input type="text" class="form-control" name="app_name" ng-disabled="_loading" ng-model="model.app_name" ng-maxlength="50" id="app_name" ng-pattern="NO_SPECIAL_CHARS" required>
-              <div class="error-messages" ng-messages="editForm.app_name.$error" role="alert">
+              <div class="error-messages" ng-messages="editForm.app_name.$error" role="alert" ng-messages-multiple>
                 <div ng-messages-include="parts/shared/error-messages.html"></div>
               </div>
             </div>
@@ -67,7 +67,7 @@
                   <div ng-bind-html="item.companyName|highlight: $select.search"></div>
                 </ui-select-choices>
               </ui-select>
-              <div class="has-error error-messages" ng-messages="editForm.accountId.$error" role="alert">
+              <div class="has-error error-messages" ng-messages="editForm.accountId.$error" role="alert" ng-messages-multiple>
                 <div ng-message="required" class="alert-text alert-text--required">Please select a customer account</div>
               </div>
             </div>
@@ -183,7 +183,7 @@
                   {{domain}}
                 </ui-select-choices>
               </ui-select>
-              <div class="error-messages" ng-messages="editForm.domainsWhiteList.$error" role="alert">
+              <div class="error-messages" ng-messages="editForm.domainsWhiteList.$error" role="alert" ng-messages-multiple>
                 <div ng-messages-include="parts/shared/error-messages.html"></div>
               </div>
             </div>
@@ -197,7 +197,7 @@
                   {{domain}}
                 </ui-select-choices>
               </ui-select>
-              <div class="error-messages" ng-messages="editForm.domainsBlackList.$error" role="alert">
+              <div class="error-messages" ng-messages="editForm.domainsBlackList.$error" role="alert" ng-messages-multiple>
                 <div ng-messages-include="parts/shared/error-messages.html"></div>
               </div>
             </div>
@@ -214,7 +214,7 @@
                     </ui-select-choices>
                   </ui-select>
                   <input type="text" class="form-control col-sm-4" placeholder="Please provision a domain first..." ng-if="getAccountDomainNameList(model.account_id).length == 0" disabled>
-                  <div class="error-messages" ng-messages="editForm.domainsBlackList.$error" role="alert">
+                  <div class="error-messages" ng-messages="editForm.domainsBlackList.$error" role="alert" ng-messages-multiple>
                     <div ng-messages-include="parts/shared/error-messages.html"></div>
                   </div>
                 </div>
