--- a/code/dev/parts/domains/edit.html
+++ b/code/dev/parts/domains/edit.html
@@ -73,7 +73,7 @@
                   <div ng-bind-html="item.companyName|highlight: $select.search"></div>
                 </ui-select-choices>
               </ui-select>
-              <div class="error-messages" ng-messages="editForm.accountId.$error" role="alert">
+              <div class="error-messages" ng-messages="editForm.accountId.$error" role="alert" ng-messages-multiple>
                 <div ng-messages-include="parts/shared/error-messages.html"></div>
               </div>
             </div>
@@ -82,7 +82,7 @@
             <label for="originServer" popover-append-to-body="{{true}}" class="col-sm-3 control-label" popover-trigger="mouseenter" uib-popover="Enter here domain name or IP address of origin web server">Origin Server Name/IP *</label>
             <div class="col-sm-9">
               <input type="text" validate-origin-server-name class="form-control" ng-disabled="_loading" ng-model="model.origin_server" id="origin_server" name="originServer" placeholder="Origin Server Name" ng-maxlength="50" required>
-              <div class="error-messages" ng-messages="editForm.originServer.$error" role="alert">
+              <div class="error-messages" ng-messages="editForm.originServer.$error" role="alert" ng-messages-multiple>
                 <div ng-messages-include="parts/shared/error-messages.html"></div>
               </div>
             </div>
@@ -91,7 +91,7 @@
             <label for="originHostHeader" popover-append-to-body="{{true}}" class="col-sm-3 control-label" popover-trigger="mouseenter" uib-popover="Enter here a domain name to be used in 'Host' header in requests sent from RevAPM to the origin server">Origin Host Header *</label>
             <div class="col-sm-9">
               <input type="text" validate-domain-name class="form-control" ng-model="model.origin_host_header" ng-disabled="_loading" id="origin_host_header" name="originHostHeader" placeholder="Origin Host Header" ng-maxlength="50" required>
-              <div class="error-messages" ng-messages="editForm.originHostHeader.$error" role="alert">
+              <div class="error-messages" ng-messages="editForm.originHostHeader.$error" role="alert" ng-messages-multiple>
                 <div ng-messages-include="parts/shared/error-messages.html"></div>
               </div>
             </div>
@@ -102,7 +102,7 @@
               <select class="form-control" ng-disabled="_loading" ng-model="model.origin_server_location_id" id="origin_server_location_id" name="originServerLocationId" ng-options="obj.id as obj.locationName for obj in locations" required="">
                 <option value="">--- Select Location ---</option>
               </select>
-              <div class="error-messages" ng-messages="editForm.originServerLocationId.$error" role="alert">
+              <div class="error-messages" ng-messages="editForm.originServerLocationId.$error" role="alert" ng-messages-multiple>
                 <div ng-messages-include="parts/shared/error-messages.html"></div>
               </div>
             </div>
@@ -135,7 +135,7 @@
                   {{domain}}
                 </ui-select-choices>
               </ui-select>
-              <div class="error-messages" ng-messages="editForm.domainAliases.$error" role="alert">
+              <div class="error-messages" ng-messages="editForm.domainAliases.$error" role="alert" ng-messages-multiple>
                 <div ng-messages-include="parts/shared/error-messages.html"></div>
               </div>
             </div>
@@ -148,7 +148,7 @@
             </label>
             <div class="col-md-9">
               <input validate-wildcard-domain-field type="text" class="form-control" ng-disabled="_loading" id="domain_wildcard_alias" name="domainWildcardAlias" ng-model="model.domain_wildcard_alias" ng-maxlength="50" placeholder="Wildcard Domain Alias">
-              <div class="error-messages" ng-messages="editForm.domainWildcardAlias.$error" role="alert">
+              <div class="error-messages" ng-messages="editForm.domainWildcardAlias.$error" role="alert" ng-messages-multiple>
                 <div ng-messages-include="parts/shared/error-messages.html"></div>
               </div>
             </div>
@@ -161,7 +161,7 @@
             </label>
             <div class="col-md-9">
               <input type="number" id="proxy_timeout" name="proxyTimeout" class="form-control" ng-disabled="_loading" ng-model="model.proxy_timeout" ng-min="1" ng-max="3600" required> second(s)
-              <div class="error-messages" ng-messages="editForm.proxyTimeout.$error" role="alert">
+              <div class="error-messages" ng-messages="editForm.proxyTimeout.$error" role="alert" ng-messages-multiple>
                 <div ng-messages-include="parts/shared/error-messages.html"></div>
               </div>
             </div>
@@ -212,7 +212,7 @@
             <div class="col-md-6">
               <textarea id="comment" name="comment" placeholder="Comment (300 characters max)" ng-maxlength="300" class="form-control" name="comment" ng-model="model.comment" ng-pattern="COMMENT_NO_SPECIAL_CHARS" ng-disabled="_loading">
               </textarea>
-              <div class="error-messages" ng-messages="editForm.comment.$error" role="alert">
+              <div class="error-messages" ng-messages="editForm.comment.$error" role="alert" ng-messages-multiple>
                 <div ng-messages-include="parts/shared/error-messages.html"></div>
               </div>
             </div>
@@ -228,7 +228,7 @@
                   {{bypass_locations}}
                 </ui-select-choices>
               </ui-select>
-              <div class="error-messages" ng-messages="editForm.cacheBypassLocations.$error" role="alert">
+              <div class="error-messages" ng-messages="editForm.cacheBypassLocations.$error" role="alert" ng-messages-multiple>
                 <div ng-messages-include="parts/shared/error-messages.html"></div>
               </div>
             </div>
@@ -324,7 +324,7 @@
                   <div class="form-group form-inline" ng-class="{'has-error': editForm.sslConfProfile.$invalid && editForm.sslConfProfile.$dirty}">
                     <select class="form-control col-sm-offset-3" ng-disabled="_loading|| (isCustomSSL_conf_profile == true)" ng-model="model.ssl_conf_profile" id="ssl_conf_profile" name="sslConfProfile" ng-options="obj.id as obj.profile_name for obj in SSL_conf_profiles" style="float: left;" required>
                     </select>
-                    <div class="error-messages" ng-messages="editForm.sslConfProfile.$error" role="alert">
+                    <div class="error-messages" ng-messages="editForm.sslConfProfile.$error" role="alert" ng-messages-multiple>
                       <div ng-messages-include="parts/shared/error-messages.html"></div>
                     </div>
                   </div>
@@ -345,7 +345,7 @@
                       Allowed SSL Protocols <small>(in Nginx format)</small></label>
                     <div class="col-sm-12">
                       <input type="text" class="form-control" ng-disabled="!isCustomSSL_conf_profile" ng-model="model.ssl_protocols" id="ssl_protocols" name="sslProtocols" ng-maxlength="200" placeholder="SSL Protocols" required>
-                      <div class="error-messages" ng-messages="editForm.sslProtocols.$error" role="alert">
+                      <div class="error-messages" ng-messages="editForm.sslProtocols.$error" role="alert" ng-messages-multiple>
                         <div ng-messages-include="parts/shared/error-messages.html"></div>
                       </div>
                     </div>
@@ -356,7 +356,7 @@
                       <small>(in Nginx format)</small></label>
                     <div class="col-sm-12">
                       <input type="text" class="form-control" ng-disabled="!isCustomSSL_conf_profile" ng-model="model.ssl_ciphers" id="ssl_ciphers" name="sslCiphers" ng-maxlength="200" placeholder="SSL Ciphers" required>
-                      <div class="error-messages" ng-messages="editForm.sslCiphers.$error" role="alert">
+                      <div class="error-messages" ng-messages="editForm.sslCiphers.$error" role="alert" ng-messages-multiple>
                         <div ng-messages-include="parts/shared/error-messages.html"></div>
                       </div>
                     </div>
@@ -378,7 +378,7 @@
             </label>
             <div class="col-md-9">
               <input type="text" class="form-control" ng-disabled="_loading" name="bttKey" ng-model="model.btt_key" placeholder="BTT API key for the domain" ng-pattern="/^[0-9a-fA-F]{24}$/">
-              <div class="error-messages" ng-messages="editForm.bttKey.$error" role="alert">
+              <div class="error-messages" ng-messages="editForm.bttKey.$error" role="alert" ng-messages-multiple>
                 <div ng-message="pattern" class="alert-text alert-text--pattern">The BTT key format is not correct</div>
                 <div ng-messages-include="parts/shared/error-messages.html"></div>
               </div>
